--- a/blog-src/2013-01-22-Treffen_31._Januar_2013.rst
+++ b/blog-src/2013-01-22-Treffen_31._Januar_2013.rst
@@ -12,7 +12,7 @@ Wir wünschen allen Python-Freunden ein frohes Neues Jahr 2013!
 
 Das nächste Treffen findet **nächsten Donnerstag** statt.
 
-Am 31. Januar 2013, 19:00 Uhr im Noklab, Neustadt 7, 37073 Göttingen.
+Am 31. Januar 2013, 19:00 Uhr im Noklab, Neustadt 7, 37073 Götingen.
 
 **Wir stellen den Abend unter das Motto RESTful Webservices**
 
@@ -22,6 +22,8 @@ Am 31. Januar 2013, 19:00 Uhr im Noklab, Neustadt 7, 37073 Göttingen.
 * Was sind die Grundlagen von HTTP?
 * Wie sieht es aus mit Datenkodierung (XML/JSON)?
 * Welche Authentifizierungsmechanismen findet man In-the-wild?
+
+`Foliensatz REST <|filename|pdf/REST.pdf>`_
 
 **2.) Programmierung von RESTful-Webservices in Python mit Bottle**
 
