--- a/blog-src/2014-07-13-Treffen_31._Juli_2014.rst
+++ b/blog-src/2014-07-13-Treffen_31._Juli_2014.rst
@@ -3,7 +3,7 @@ Treffen 31. Juli 2014
 
 :date: 2014-07-13 18:04
 :author: Marcel Hellkamp
-:category: Aktuell
+:category: Termine
 :tags: Termin
 
 Hi Leute,
