--- a/blog-src/2014-08-17-Treffen_21._August_2014.rst
+++ b/blog-src/2014-08-17-Treffen_21._August_2014.rst
@@ -2,8 +2,8 @@ Treffen 21. August 2014
 ###############################################################################
 
 :date: 2014-08-17 20:18
-:author: Oliver Schmitt
-:category: Aktuell
+:author: Oliver Wannenwetsch
+:category: Termine
 :tags: Termin
 
 Liebe Freundinnen, liebe Freunde,
