--- a/blog-src/2015-01-26-Treffen_29._Januar_2015.rst
+++ b/blog-src/2015-01-26-Treffen_29._Januar_2015.rst
@@ -3,7 +3,7 @@ Treffen 29. Januar 2015
 
 :date: 2015-01-26 15:11
 :author: Marcel Hellkamp
-:category: Aktuell
+:category: Termine
 :tags: Termin
 
 Für das erste Treffen im Jahr 2015 stehen diesmal mehrere Themen zur Wahl:
