--- a/blog-src/2013-01-22-Treffen_31._Januar_2013.rst
+++ b/blog-src/2013-01-22-Treffen_31._Januar_2013.rst
@@ -2,8 +2,8 @@ Treffen 31. Januar 2013
 ###############################################################################
 
 :date: 2013-01-22 17:41
-:author: Oliver Schmitt
-:category: Aktuell
+:author: Oliver Wannenwetsch
+:category: Termine
 :tags: Termin
 
 -- ENGLISH TEXT BELOW --
